[package]
name = "eg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
tracing-subscriber = "0.3"
sysinfo = "0.28.2"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
message-io = "0.14.8"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "HWClient.exe"
FileDescription = "Hardware Client"
PRODUCTVERSION = "0.1.0"

